Agregado ejemplo de carga de resultados.

--- a/TP1/python/experimentos.ipynb
+++ b/TP1/python/experimentos.ipynb
@@ -181,7 +181,7 @@
    ],
    "source": [
     "numero_de_experimento = 1\n",
-    "numero_de_repeticiones = 1 # Aumentar para mayor precisión con los tiempos\n",
+    "numero_de_repeticiones = 5 # Aumentar para mayor precisión con los tiempos\n",
     "for (archivo, p) in experimentos:\n",
     "    \n",
     "    # Voy mostrando que experimento se esta ejecutando.\n",
@@ -319,7 +319,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "archivo = open(\"archivo\")\n",
+    "lineas = archivo.readlines()\n",
+    "p = lineas[0]\n",
+    "resultado = lineas[1:]\n",
+    "resultado[5]\n",
+    "pd.Series(resultado)"
+   ]
   }
  ],
  "metadata": {
