--- a/TP1/python/experimentos.ipynb
+++ b/TP1/python/experimentos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "import pandas as pd\n",
     "import time\n",
     "import filecmp\n",
-    "\n",
+    "#from IPython.core.debugger import set_trace\n",
+    "#set_trace()\n",
     "from os import listdir, getcwd\n",
     "from os.path import isfile, join"
    ]
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
     "    \n",
     "    # Crear proceso para ejecutar el codigo.\n",
     "    output_dir = join(getcwd(), 'resultados')\n",
-    "    process = subprocess.Popen([\"../src/tp1.exe\", archivo_instancia, str(p)], cwd=output_dir)\n",
+    "    process = subprocess.Popen([\"../../src/tp1\", archivo_instancia, str(p)], cwd=output_dir)\n",
     "\n",
     "    # Correr experimento.\n",
     "    exit_code = process.wait()\n",
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,13 @@
     "experimentos.append((\"..\\\\..\\\\tests\\\\test_aleatorio_desordenado.txt\", 0.76))\n",
     "experimentos.append((\"..\\\\..\\\\tests\\\\test_completo.txt\", 0.5))\n",
     "experimentos.append((\"..\\\\..\\\\tests\\\\test_sin_links.txt\", 0.64))\n",
-    "experimentos.append((\"..\\\\..\\\\tests\\\\test_trivial.txt\", 0.3))"
+    "experimentos.append((\"..\\\\..\\\\tests\\\\test_trivial.txt\", 0.3))\n",
+    "#######################################\n",
+    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_200_links_P:0.7.txt\", 0.7))\n",
+    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_400_links_P:0.7.txt\", 0.7))\n",
+    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_600_links_P:0.7.txt\", 0.7))\n",
+    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_800_links_P:0.7.txt\", 0.7))\n",
+    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_1000_links_P:0.7.txt\", 0.7))"
    ]
   },
   {
@@ -103,78 +110,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Corriendo experimento: 1/6\n",
+      "Corriendo experimento: 1/11 (..\\..\\tests\\test_15_segundos.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
-      "count      1.000000\n",
-      "mean     135.279991\n",
-      "std             NaN\n",
-      "min      135.279991\n",
-      "25%      135.279991\n",
-      "50%      135.279991\n",
-      "75%      135.279991\n",
-      "max      135.279991\n",
+      "count    5.000000\n",
+      "mean     0.006352\n",
+      "std      0.001291\n",
+      "min      0.005325\n",
+      "25%      0.005733\n",
+      "50%      0.005759\n",
+      "75%      0.006385\n",
+      "max      0.008560\n",
       "dtype: float64\n",
-      "Corriendo experimento: 2/6\n",
+      "Corriendo experimento: 2/11 (..\\..\\tests\\test_30_segundos.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
-      "count      1.000000\n",
-      "mean     148.464985\n",
-      "std             NaN\n",
-      "min      148.464985\n",
-      "25%      148.464985\n",
-      "50%      148.464985\n",
-      "75%      148.464985\n",
-      "max      148.464985\n",
+      "count    5.000000\n",
+      "mean     0.006151\n",
+      "std      0.001003\n",
+      "min      0.005298\n",
+      "25%      0.005429\n",
+      "50%      0.005545\n",
+      "75%      0.007117\n",
+      "max      0.007366\n",
       "dtype: float64\n",
-      "Corriendo experimento: 3/6\n",
+      "Corriendo experimento: 3/11 (..\\..\\tests\\test_aleatorio_desordenado.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
-      "count    1.000000\n",
-      "mean     0.012247\n",
-      "std           NaN\n",
-      "min      0.012247\n",
-      "25%      0.012247\n",
-      "50%      0.012247\n",
-      "75%      0.012247\n",
-      "max      0.012247\n",
+      "count    5.000000\n",
+      "mean     0.004951\n",
+      "std      0.000954\n",
+      "min      0.003943\n",
+      "25%      0.004015\n",
+      "50%      0.005166\n",
+      "75%      0.005494\n",
+      "max      0.006137\n",
       "dtype: float64\n",
-      "Corriendo experimento: 4/6\n",
+      "Corriendo experimento: 4/11 (..\\..\\tests\\test_completo.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
-      "count    1.000000\n",
-      "mean     0.014279\n",
-      "std           NaN\n",
-      "min      0.014279\n",
-      "25%      0.014279\n",
-      "50%      0.014279\n",
-      "75%      0.014279\n",
-      "max      0.014279\n",
+      "count    5.000000\n",
+      "mean     0.005877\n",
+      "std      0.000763\n",
+      "min      0.005350\n",
+      "25%      0.005350\n",
+      "50%      0.005408\n",
+      "75%      0.006197\n",
+      "max      0.007081\n",
       "dtype: float64\n",
-      "Corriendo experimento: 5/6\n",
+      "Corriendo experimento: 5/11 (..\\..\\tests\\test_sin_links.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
-      "count    1.000000\n",
-      "mean     0.013645\n",
-      "std           NaN\n",
-      "min      0.013645\n",
-      "25%      0.013645\n",
-      "50%      0.013645\n",
-      "75%      0.013645\n",
-      "max      0.013645\n",
+      "count    5.000000\n",
+      "mean     0.006016\n",
+      "std      0.001156\n",
+      "min      0.005193\n",
+      "25%      0.005433\n",
+      "50%      0.005616\n",
+      "75%      0.005794\n",
+      "max      0.008046\n",
       "dtype: float64\n",
-      "Corriendo experimento: 6/6\n",
+      "Corriendo experimento: 6/11 (..\\..\\tests\\test_trivial.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
-      "count    1.00000\n",
-      "mean     0.01508\n",
-      "std          NaN\n",
-      "min      0.01508\n",
-      "25%      0.01508\n",
-      "50%      0.01508\n",
-      "75%      0.01508\n",
-      "max      0.01508\n",
+      "count    5.000000\n",
+      "mean     0.005088\n",
+      "std      0.000292\n",
+      "min      0.004748\n",
+      "25%      0.004929\n",
+      "50%      0.004986\n",
+      "75%      0.005321\n",
+      "max      0.005455\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 7/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_200_links_P:0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.006039\n",
+      "std      0.000389\n",
+      "min      0.005613\n",
+      "25%      0.005807\n",
+      "50%      0.005954\n",
+      "75%      0.006202\n",
+      "max      0.006617\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 8/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_400_links_P:0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.005513\n",
+      "std      0.000624\n",
+      "min      0.004470\n",
+      "25%      0.005438\n",
+      "50%      0.005733\n",
+      "75%      0.005878\n",
+      "max      0.006046\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 9/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_600_links_P:0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.004989\n",
+      "std      0.000690\n",
+      "min      0.004344\n",
+      "25%      0.004352\n",
+      "50%      0.004944\n",
+      "75%      0.005337\n",
+      "max      0.005967\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 10/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_800_links_P:0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.006176\n",
+      "std      0.000995\n",
+      "min      0.005333\n",
+      "25%      0.005361\n",
+      "50%      0.005687\n",
+      "75%      0.007125\n",
+      "max      0.007376\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 11/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_1000_links_P:0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.005906\n",
+      "std      0.000837\n",
+      "min      0.005345\n",
+      "25%      0.005361\n",
+      "50%      0.005630\n",
+      "75%      0.005836\n",
+      "max      0.007357\n",
       "dtype: float64\n"
      ]
     }
@@ -320,6 +382,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "experimentos = [];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "archivo = open(\"archivo\")\n",
     "lineas = archivo.readlines()\n",
     "p = lineas[0]\n",
@@ -331,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -345,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
