--- a/TP1/python/generar-instancias.ipynb
+++ b/TP1/python/generar-instancias.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "def generarInstancia3Principales(DataSet,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,NombreInstancia=\"\",P=0.7):\n",
     "    SetPaginasPosibles=set(range(cantidadTotalDePaginas))\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    \n",
     "    #genero los que apuntan a la pagina 1\n",
     "    for i in range(1, Cant1+1):\n",
@@ -75,7 +75,7 @@
     "            imprimirArista(DataSet, NombreInstancia, cantidadTotalDeLinks,PaginaElegida,1,P)\n",
     "    \n",
     "    #genero los que apuntan a la pagina 2\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    for i in range(1, Cant2+1):\n",
     "        PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
     "        PaginaElegida = random.choice(PaginasPosibles)\n",
@@ -86,7 +86,7 @@
     "            imprimirArista(DataSet, NombreInstancia, cantidadTotalDeLinks,PaginaElegida,2,P)\n",
     "\n",
     "    #genero los que apuntan a la pagina 3\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    for i in range(1, Cant3+1):\n",
     "        PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
     "        PaginaElegida = random.choice(PaginasPosibles)\n",
@@ -96,7 +96,7 @@
     "        else:\n",
     "            imprimirArista(DataSet, NombreInstancia, cantidadTotalDeLinks,PaginaElegida,3,P)\n",
     "    \n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    #genero las aristas restantes\n",
     "    PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
     "    listaDeTuplas = ElegirAristas(PaginasPosibles,(cantidadTotalDeLinks-Cant3-Cant2-Cant1)+1)\n",
@@ -111,7 +111,7 @@
     "    \n",
     "\n",
     "def ElegirAristas(listaDePaginas, cantRestantes):\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    listaElegida=[]\n",
     "    for i in range(1,20):\n",
     "        listaElegida.append(random.choice(listaDePaginas))\n",
@@ -266,7 +266,7 @@
    "source": [
     "def generarInstancia3PrincipalesConAnillo(DataSet,CantLegales,cantidadTotalDeLinks,Cant1,Cant2,Cant3,PrimeroDelAnillo,NombreAImprimir,P):\n",
     "    SetPaginasPosibles=set(range(CantLegales))\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    #genero los que apuntan a la pagina 1\n",
     "    for i in range(1, Cant1+1):\n",
     "        PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
@@ -274,7 +274,7 @@
     "        blacklist.append(PaginaElegida)\n",
     "        imprimirAristaConAnillo(DataSet, NombreAImprimir, cantidadTotalDeLinks,PaginaElegida,1,PrimeroDelAnillo,P)\n",
     "    #genero los que apuntan a la pagina 2\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    for i in range(1, Cant2+1):\n",
     "        PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
     "        PaginaElegida = random.choice(PaginasPosibles)\n",
@@ -282,13 +282,13 @@
     "        imprimirAristaConAnillo(DataSet, NombreAImprimir, cantidadTotalDeLinks,PaginaElegida,2,PrimeroDelAnillo,P)\n",
     "        \n",
     "    #genero los que apuntan a la pagina 3\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    for i in range(1, Cant3+1):\n",
     "        PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
     "        PaginaElegida = random.choice(PaginasPosibles)\n",
     "        blacklist.append(PaginaElegida)\n",
     "        imprimirAristaConAnillo(DataSet, NombreAImprimir, cantidadTotalDeLinks,PaginaElegida,3,PrimeroDelAnillo,P)\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    \n",
     "    #genero las aristas restantes\n",
     "    PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
@@ -300,7 +300,7 @@
     "        imprimirAristaConAnillo(DataSet, NombreAImprimir, cantidadTotalDeLinks,Desde,Hasta,PrimeroDelAnillo,P)\n",
     "\n",
     "def ElegirAristas(listaDePaginas, cantRestantes):\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    listaElegida=[]\n",
     "    for i in range(1,20):\n",
     "        listaElegida.append(random.choice(listaDePaginas))\n",
@@ -385,7 +385,7 @@
     "def generarInstanciaPaginaApuntada(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P):\n",
     "    imprimirEncabezadoInstanciasApuntadas(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,CantidadImportantesApuntando,P)\n",
     "    generarInstancia3PrincipalesVersion2(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P)\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    PaginasPosibles=list(set(range(cantidadTotalDePaginas)).difference(blacklist))\n",
     "    PaginaElegida = random.choice(PaginasPosibles)\n",
     "    for i in range(1,CantidadImportantesApuntando+1):\n",
@@ -400,7 +400,7 @@
    "source": [
     "def generarInstancia3PrincipalesVersion2(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P):\n",
     "    SetPaginasPosibles=set(range(cantidadTotalDePaginas))\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    cantidadTotalDeLinks=cantidadTotalDeLinks-CantidadImportantesApuntando\n",
     "    #genero los que apuntan a la pagina 1\n",
     "    for i in range(1, Cant1+1):\n",
@@ -409,14 +409,14 @@
     "        blacklist.append(PaginaElegida)\n",
     "        imprimirAristaVersionInstanciasApuntadas(Carpeta, cantidadTotalDePaginas,cantidadTotalDeLinks+CantidadImportantesApuntando,PaginaElegida,1,CantidadImportantesApuntando,P)\n",
     "    #genero los que apuntan a la pagina 2\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    for i in range(1, Cant2+1):\n",
     "        PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
     "        PaginaElegida = random.choice(PaginasPosibles)\n",
     "        blacklist.append(PaginaElegida)\n",
     "        imprimirAristaVersionInstanciasApuntadas(Carpeta, cantidadTotalDePaginas, cantidadTotalDeLinks+CantidadImportantesApuntando,PaginaElegida,2,CantidadImportantesApuntando,P)\n",
     "    #genero los que apuntan a la pagina 3\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    for i in range(1, Cant3+1):\n",
     "        PaginasPosibles=list(SetPaginasPosibles.difference(blacklist))\n",
     "        PaginaElegida = random.choice(PaginasPosibles)\n",
@@ -433,7 +433,7 @@
     "        imprimirAristaVersionInstanciasApuntadas(Carpeta, cantidadTotalDePaginas,cantidadTotalDeLinks+CantidadImportantesApuntando,Desde,Hasta,CantidadImportantesApuntando,P)\n",
     "\n",
     "def ElegirAristas(listaDePaginas, cantRestantes):\n",
-    "    blacklist=[1,2,3]\n",
+    "    blacklist=[0,1,2,3]\n",
     "    listaElegida=[]\n",
     "    for i in range(1,20):\n",
     "        listaElegida.append(random.choice(listaDePaginas))\n",
@@ -503,7 +503,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -517,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
