algunos exp corridos

--- a/TP1/python/experimentos.ipynb
+++ b/TP1/python/experimentos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "    \n",
     "    # Crear proceso para ejecutar el codigo.\n",
     "    output_dir = join(getcwd(), 'resultados')\n",
-    "    process = subprocess.Popen([\"../src/tp1.exe\", archivo_instancia, str(p)], cwd=output_dir)\n",
+    "    process = subprocess.Popen([\"../../src/tp1\", archivo_instancia, str(p)], cwd=output_dir)\n",
     "\n",
     "    # Correr experimento.\n",
     "    exit_code = process.wait()\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,22 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_15_segundos.txt\", 0.9))\n",
-    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_30_segundos.txt\", 0.8))\n",
-    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_aleatorio_desordenado.txt\", 0.76))\n",
-    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_completo.txt\", 0.5))\n",
-    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_sin_links.txt\", 0.64))\n",
-    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_trivial.txt\", 0.3))\n",
+    "experimentos.append((\"../../tests/test_15_segundos.txt\", 0.9))\n",
+    "experimentos.append((\"../../tests/test_30_segundos.txt\", 0.8))\n",
+    "experimentos.append((\"../../tests/test_aleatorio_desordenado.txt\", 0.76))\n",
+    "experimentos.append((\"../../tests/test_completo.txt\", 0.5))\n",
+    "experimentos.append((\"../../tests/test_sin_links.txt\", 0.64))\n",
+    "#experimentos.append((\"../../tests/test_trivial.txt\", 0.3))\n",
     "#######################################\n",
-    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_200_links_P_0.7.txt\", 0.7))\n",
-    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_400_links_P_0.7.txt\", 0.7))\n",
-    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_600_links_P_0.7.txt\", 0.7))\n",
-    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_800_links_P_0.7.txt\", 0.7))\n",
-    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_1000_links_P_0.7.txt\", 0.7))"
+    "experimentos.append((\"../instancias/3 Principales/1000_paginas_200_links_P_0.7.txt\", 0.7))\n",
+    "experimentos.append((\"../instancias/3 Principales/1000_paginas_400_links_P_0.7.txt\", 0.7))\n",
+    "experimentos.append((\"../instancias/3 Principales/1000_paginas_600_links_P_0.7.txt\", 0.7))\n",
+    "experimentos.append((\"../instancias/3 Principales/1000_paginas_800_links_P_0.7.txt\", 0.7))\n",
+    "experimentos.append((\"../instancias/3 Principales/1000_paginas_1000_links_P_0.7.txt\", 0.7))"
    ]
   },
   {
@@ -110,48 +110,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Corriendo experimento: 1/5 (..\\instancias\\3 Principales\\1000_paginas_200_links_P_0.7.txt)\n",
+      "Corriendo experimento: 1/26 (..\\instancias\\3 Principales\\1000_paginas_200_links_P_0.7.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
       "count    5.000000\n",
-      "mean     0.337199\n",
-      "std      0.009152\n",
-      "min      0.323078\n",
-      "25%      0.334630\n",
-      "50%      0.338228\n",
-      "75%      0.343389\n",
-      "max      0.346669\n",
+      "mean     0.005718\n",
+      "std      0.001686\n",
+      "min      0.004543\n",
+      "25%      0.004794\n",
+      "50%      0.004844\n",
+      "75%      0.005799\n",
+      "max      0.008610\n",
       "dtype: float64\n",
-      "Corriendo experimento: 2/5 (..\\instancias\\3 Principales\\1000_paginas_400_links_P_0.7.txt)\n",
+      "Corriendo experimento: 2/26 (..\\instancias\\3 Principales\\1000_paginas_400_links_P_0.7.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
       "count    5.000000\n",
-      "mean     0.335024\n",
-      "std      0.002123\n",
-      "min      0.332582\n",
-      "25%      0.333619\n",
-      "50%      0.334519\n",
-      "75%      0.336772\n",
-      "max      0.337629\n",
+      "mean     0.005805\n",
+      "std      0.000510\n",
+      "min      0.005168\n",
+      "25%      0.005534\n",
+      "50%      0.005707\n",
+      "75%      0.006162\n",
+      "max      0.006457\n",
       "dtype: float64\n",
-      "Corriendo experimento: 3/5 (..\\instancias\\3 Principales\\1000_paginas_600_links_P_0.7.txt)\n"
+      "Corriendo experimento: 3/26 (..\\instancias\\3 Principales\\1000_paginas_600_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.005680\n",
+      "std      0.000569\n",
+      "min      0.004704\n",
+      "25%      0.005801\n",
+      "50%      0.005818\n",
+      "75%      0.005884\n",
+      "max      0.006196\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 4/26 (..\\instancias\\3 Principales\\1000_paginas_800_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.006100\n",
+      "std      0.000430\n",
+      "min      0.005578\n",
+      "25%      0.005882\n",
+      "50%      0.005968\n",
+      "75%      0.006422\n",
+      "max      0.006648\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 5/26 (..\\instancias\\3 Principales\\1000_paginas_1000_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.006341\n",
+      "std      0.001017\n",
+      "min      0.005636\n",
+      "25%      0.005839\n",
+      "50%      0.005857\n",
+      "75%      0.006260\n",
+      "max      0.008115\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 6/26 (..\\..\\instancias\\3 Principales\\1000_paginas_200_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.006180\n",
+      "std      0.000476\n",
+      "min      0.005732\n",
+      "25%      0.005883\n",
+      "50%      0.005945\n",
+      "75%      0.006467\n",
+      "max      0.006872\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 7/26 (..\\..\\instancias\\3 Principales\\1000_paginas_400_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.005927\n",
+      "std      0.001263\n",
+      "min      0.004144\n",
+      "25%      0.005030\n",
+      "50%      0.006771\n",
+      "75%      0.006845\n",
+      "max      0.006845\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 8/26 (..\\..\\instancias\\3 Principales\\1000_paginas_600_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.006488\n",
+      "std      0.001050\n",
+      "min      0.005481\n",
+      "25%      0.005757\n",
+      "50%      0.006510\n",
+      "75%      0.006514\n",
+      "max      0.008178\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 9/26 (..\\..\\instancias\\3 Principales\\1000_paginas_800_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.006477\n",
+      "std      0.001679\n",
+      "min      0.004525\n",
+      "25%      0.005351\n",
+      "50%      0.006166\n",
+      "75%      0.007748\n",
+      "max      0.008594\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 10/26 (..\\..\\instancias\\3 Principales\\1000_paginas_1000_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.006123\n",
+      "std      0.000567\n",
+      "min      0.005524\n",
+      "25%      0.005597\n",
+      "50%      0.006295\n",
+      "75%      0.006310\n",
+      "max      0.006888\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 11/26 (../instancias/3 Principales/1000_paginas_200_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.158699\n",
+      "std      0.012621\n",
+      "min      0.144033\n",
+      "25%      0.148033\n",
+      "50%      0.161158\n",
+      "75%      0.165620\n",
+      "max      0.174648\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 12/26 (../instancias/3 Principales/1000_paginas_400_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.165918\n",
+      "std      0.008875\n",
+      "min      0.154418\n",
+      "25%      0.162730\n",
+      "50%      0.163140\n",
+      "75%      0.172169\n",
+      "max      0.177135\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 13/26 (../instancias/3 Principales/1000_paginas_600_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.179096\n",
+      "std      0.007774\n",
+      "min      0.167833\n",
+      "25%      0.175202\n",
+      "50%      0.180515\n",
+      "75%      0.184667\n",
+      "max      0.187262\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 14/26 (../instancias/3 Principales/1000_paginas_800_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.186486\n",
+      "std      0.012052\n",
+      "min      0.174890\n",
+      "25%      0.176339\n",
+      "50%      0.184113\n",
+      "75%      0.193687\n",
+      "max      0.203399\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 15/26 (../instancias/3 Principales/1000_paginas_1000_links_P_0.7.txt)\n",
+      "Estadísticas de los tiempos de ejecución:\n",
+      "count    5.000000\n",
+      "mean     0.190126\n",
+      "std      0.004890\n",
+      "min      0.183132\n",
+      "25%      0.188749\n",
+      "50%      0.189683\n",
+      "75%      0.192826\n",
+      "max      0.196239\n",
+      "dtype: float64\n",
+      "Corriendo experimento: 16/26 (../../tests/test_15_segundos.txt)\n"
      ]
     },
     {
-     "ename": "Exception",
-     "evalue": "Hubo un error en la experimentacion para el algoritmo con la instancia ..\\instancias\\3 Principales\\1000_paginas_600_links_P_0.7.txt.",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [38]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m tiempos \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m repeticion \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(numero_de_repeticiones):\n\u001b[1;32m---> 10\u001b[0m     tiempo_de_ejecucion \u001b[38;5;241m=\u001b[39m \u001b[43mcorrer_experimento\u001b[49m\u001b[43m(\u001b[49m\u001b[43marchivo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m;\n\u001b[0;32m     11\u001b[0m     tiempos\u001b[38;5;241m.\u001b[39mappend(tiempo_de_ejecucion)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEstadísticas de los tiempos de ejecución:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36mcorrer_experimento\u001b[1;34m(archivo_instancia, p)\u001b[0m\n\u001b[0;32m      9\u001b[0m exit_code \u001b[38;5;241m=\u001b[39m process\u001b[38;5;241m.\u001b[39mwait()\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Verificar que el proceso no fallo.\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m exit_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m: \u001b[38;5;28;01mraise\u001b[39;00m(\u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mF\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHubo un error en la experimentacion para el algoritmo con la instancia \u001b[39m\u001b[38;5;132;01m{\u001b[39;00marchivo_instancia\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     14\u001b[0m end \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m end\u001b[38;5;241m-\u001b[39mstart\n",
-      "\u001b[1;31mException\u001b[0m: Hubo un error en la experimentacion para el algoritmo con la instancia ..\\instancias\\3 Principales\\1000_paginas_600_links_P_0.7.txt."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-1daad1d99809>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mtiempos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrepeticion\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumero_de_repeticiones\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mtiempo_de_ejecucion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcorrer_experimento\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marchivo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mtiempos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtiempo_de_ejecucion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-ae541334c727>\u001b[0m in \u001b[0;36mcorrer_experimento\u001b[0;34m(archivo_instancia, p)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Correr experimento.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mexit_code\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# Verificar que el proceso no fallo.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1081\u001b[0m             \u001b[0mendtime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1082\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1083\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1084\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1085\u001b[0m             \u001b[0;31m# https://bugs.python.org/issue25942\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36m_wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1804\u001b[0m                         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1805\u001b[0m                             \u001b[0;32mbreak\u001b[0m  \u001b[0;31m# Another thread waited.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1806\u001b[0;31m                         \u001b[0;34m(\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_try_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1807\u001b[0m                         \u001b[0;31m# Check the pid and loop as waitpid has been known to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1808\u001b[0m                         \u001b[0;31m# return 0 even without WNOHANG in odd situations.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36m_try_wait\u001b[0;34m(self, wait_flags)\u001b[0m\n\u001b[1;32m   1762\u001b[0m             \u001b[0;34m\"\"\"All callers to this function MUST hold self._waitpid_lock.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1763\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1764\u001b[0;31m                 \u001b[0;34m(\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwaitpid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwait_flags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1765\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mChildProcessError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1766\u001b[0m                 \u001b[0;31m# This happens if SIGCLD is set to be ignored or waiting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -249,7 +395,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -263,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
