--- a/TP1/python/generar-instancias.ipynb
+++ b/TP1/python/generar-instancias.ipynb
@@ -169,6 +169,9 @@
       "instancias/3 Principales/1000_paginas_1000_links_P_0.7.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
+      "instancias/3 Principales/1000_paginas_500_links_P_0.0.txt \n",
+      "Creado con exito\n",
+      "Archivo:\n",
       "instancias/3 Principales/1000_paginas_500_links_P_0.2.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
@@ -194,6 +197,7 @@
     "    generarUnaInstancia(\"3 Principales\",1000,800,400,200,80,0.7)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,1000,500,250,100,0.7)\n",
     "def generarDataSetEXP2():\n",
+    "    generarUnaInstancia(\"3 Principales\",1000,500,250,125,50,0.0)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,500,250,125,50,0.2)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,500,250,125,50,0.4)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,500,250,125,50,0.6)\n",
