graficos de varios exp

--- a/TP1/python/generar-instancias.ipynb
+++ b/TP1/python/generar-instancias.ipynb
@@ -390,8 +390,7 @@
     "    imprimirEncabezadoInstanciasApuntadas(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,CantidadImportantesApuntando,P)\n",
     "    generarInstancia3PrincipalesVersion2(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P)\n",
     "    blacklist=[0,1,2,3]\n",
-    "    PaginasPosibles=list(set(range(cantidadTotalDePaginas)).difference(blacklist))\n",
-    "    PaginaElegida = random.choice(PaginasPosibles)\n",
+    "    PaginaElegida = 4\n",
     "    for i in range(1,CantidadImportantesApuntando+1):\n",
     "        imprimirAristaVersionInstanciasApuntadas(Carpeta, cantidadTotalDePaginas, cantidadTotalDeLinks,i,PaginaElegida,CantidadImportantesApuntando,P)"
    ]
@@ -404,7 +403,7 @@
    "source": [
     "def generarInstancia3PrincipalesVersion2(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P):\n",
     "    SetPaginasPosibles=set(range(cantidadTotalDePaginas))\n",
-    "    blacklist=[0,1,2,3]\n",
+    "    blacklist=[0,1,2,3,4]\n",
     "    cantidadTotalDeLinks=cantidadTotalDeLinks-CantidadImportantesApuntando\n",
     "    #genero los que apuntan a la pagina 1\n",
     "    for i in range(1, Cant1+1):\n",
