instancias de complegidad temporal creadas

--- a/TP1/python/generar-instancias.ipynb
+++ b/TP1/python/generar-instancias.ipynb
@@ -497,6 +497,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# instancias para calcular la complejidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generarInstancia(cantPaginas,CantLinks):\n",
+    "    imprimirEncabezadoInstanciasApuntadas(cantPaginas,CantLinks)\n",
+    "    i=CantLinks\n",
+    "    while (i>0):\n",
+    "        desde=i\n",
+    "        hasta=abs(i+1-cantPaginas)\n",
+    "        if hasta==0:\n",
+    "            hasta=1\n",
+    "        imprimirAristaVersionInstanciasApuntadas(cantPaginas,CantLinks,desde,hasta)\n",
+    "        i=i-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def imprimirAristaVersionInstanciasApuntadas(n,l,desde,hasta):\n",
+    "    with open(F\"instancias/complejidad temporal/n_\"+str(n)+\"Links_\"+str(l), \"r+\") as f:\n",
+    "        f.seek(0, 2)\n",
+    "        f.write(str(desde)+\" \"+str(hasta)+\"\\n\")\n",
+    "\n",
+    "def imprimirEncabezadoInstanciasApuntadas(n,l):\n",
+    "    with open(F\"instancias/complejidad temporal/n_\"+str(n)+\"Links_\"+str(l), \"w\") as f:\n",
+    "        f.write(str(n)+\"\\n\")\n",
+    "        f.write(str(l)+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cantPaginas=[1, 25, 50, 75, 100]\n",
+    "for CP in cantPaginas:\n",
+    "    CantLinks=[1, round(0.25*CP*CP), round(0.5*CP*CP), round(0.75*CP*CP), CP*CP]\n",
+    "    for CL in CantLinks:\n",
+    "        generarInstancia(CP,CL)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
