creo que avance

--- a/TP1/python/generar-instancias.ipynb
+++ b/TP1/python/generar-instancias.ipynb
@@ -505,25 +505,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generarInstancia(cantPaginas,CantLinks):\n",
     "    imprimirEncabezadoInstanciasApuntadas(cantPaginas,CantLinks)\n",
-    "    i=CantLinks\n",
-    "    while (i>0):\n",
-    "        desde=i\n",
-    "        hasta=abs(i+1-cantPaginas)\n",
-    "        if hasta==0:\n",
-    "            hasta=1\n",
-    "        imprimirAristaVersionInstanciasApuntadas(cantPaginas,CantLinks,desde,hasta)\n",
-    "        i=i-1"
+    "    CantLinksAux=0\n",
+    "    for i in range(1, cantPaginas+1):\n",
+    "        for j in range(1, cantPaginas+1):\n",
+    "            imprimirAristaVersionInstanciasApuntadas(cantPaginas,CantLinks,i,j)\n",
+    "            if(CantLinksAux>=CantLinks):\n",
+    "                return\n",
+    "            CantLinksAux=CantLinksAux+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
