emprolijado de generador de instancias

--- a/TP1/python/generar-instancias.ipynb
+++ b/TP1/python/generar-instancias.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### funciones que imprimen aristas y encabezado en instancias del tipo 3 principales"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -43,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset 1\n",
+    "# Dataset 3 principales\n",
     "Instancias que modelan el una web con 3 paginas principales.\n"
    ]
   },
@@ -129,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### invoco la funcion"
+    "### Funcion que genera las intancias"
    ]
   },
   {
@@ -190,13 +197,15 @@
     }
    ],
    "source": [
-    "def generarDataSetEXP1():\n",
+    "#Instancias para el experimento 4\n",
+    "def generarDataSetEXP4():\n",
     "    generarUnaInstancia(\"3 Principales\",1000,200,100,50,20,0.7)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,400,200,100,40,0.7)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,600,300,150,60,0.7)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,800,400,200,80,0.7)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,1000,500,250,100,0.7)\n",
-    "def generarDataSetEXP2():\n",
+    "#Instancias para el experimento 5\n",
+    "def generarDataSetEXP5():\n",
     "    generarUnaInstancia(\"3 Principales\",1000,500,250,125,50,0.0)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,500,250,125,50,0.2)\n",
     "    generarUnaInstancia(\"3 Principales\",1000,500,250,125,50,0.4)\n",
@@ -205,19 +214,16 @@
     "    generarUnaInstancia(\"3 Principales\",1000,500,250,125,50,1)\n",
     "    \n",
     "\n",
-    "generarDataSetEXP1()\n",
-    "generarDataSetEXP2()"
+    "generarDataSetEXP4()\n",
+    "generarDataSetEXP5()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset 2\n",
+    "# Dataset 3 principales y anillo\n",
     "Instancias en donde hay 3 claros principales pero tambien hay un anillo aislado de paginas que se apuntan entre si y todas a una pagina central\n",
-    "\n",
-    "```es nescesario correr el bloque que define generarInstancia3Principales() ya que se usa\n",
-    "```\n",
     "\n",
     "Por practicidad la pagina central del anillo es la ultima y las que integran el anillo son las ultimas N-1 (siendo N la cantidad de paginas del anillo)"
    ]
@@ -226,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defino la funcion que va a generar la instancia"
+    "### Defino las funciones que va a generar la instancia"
    ]
   },
   {
@@ -303,6 +309,7 @@
     "        Hasta = tupla[1]\n",
     "        imprimirAristaConAnillo(DataSet, NombreAImprimir, cantidadTotalDeLinks,Desde,Hasta,PrimeroDelAnillo,P)\n",
     "\n",
+    "#funcion que genera las aristas aleatorias\n",
     "def ElegirAristas(listaDePaginas, cantRestantes):\n",
     "    blacklist=[0,1,2,3]\n",
     "    listaElegida=[]\n",
@@ -316,6 +323,13 @@
     "    return result[0:cantRestantes]\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funciones que imprimen aristas y encabezado en instancias del tipo 3 principales y anillo"
    ]
   },
   {
@@ -339,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### invoco la funcion"
+    "### Genero las instancias"
    ]
   },
   {
@@ -348,6 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#instancias para el experimento 6\n",
     "DataSet=\"3 Principales y Anillo\"\n",
     "cantidadTotalDePaginas=1000\n",
     "cantidadTotalDeLinks=501\n",
@@ -369,15 +384,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset 3\n",
-    "Instancias que modelan el caso particular donde las paginas principales apuntan a otra no tan principal"
+    "# Dataset 3 principales apuntando a \n",
+    "Instancias que modelan el caso particular donde las paginas principales apuntan a otra no principal"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defino la funcion que va a generar la instancia"
+    "### Defino las funciones que van a generar las instancia"
    ]
   },
   {
@@ -449,6 +464,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funciones que imprimen aristas y encabezado en instancias del tipo 3 principales apuntando a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -470,7 +492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### invoco la funcion"
+    "### Genero las instancias"
    ]
   },
   {
@@ -500,12 +522,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# instancias para calcular la complejidad"
+    "# Instancias del data set complejidad temporal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defino la funcion que va a generar las instancias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,8 +550,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funciones que imprimen aristas y encabezado en instancias del tipo complejidad temporal"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,8 +575,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Directamente genero las instancias"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,13 +593,6 @@
     "    for CL in CantLinks:\n",
     "        generarInstancia(CP,CL)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
